--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -155,6 +155,9 @@
         cursor: pointer;
         border-radius: 5px;
     }
+    .menu-itemCard__details > button >  a{
+        color:white
+    }
     .menu-item__showMore{
         display: flex;
         justify-content: center;
@@ -190,3 +193,61 @@
     .author{
         font-size: 18px;
     }
+
+
+    
+.body{
+    position: relative;
+    width:100%;
+    height:100%
+}
+
+.form{
+    position: absolute;
+    top:10%;
+    left:40%;
+}
+.form-background{
+    height:100vh;
+    width:100vw
+}
+
+.form-title{
+    padding:20px 0;
+    color:white
+}
+
+.form-select__img{
+    width: 100px;
+    height: 100px;
+    
+    border-radius: 25px;
+    
+}
+
+.form-select-details{
+    line-height: 30px;
+}
+
+.fieldset{
+    padding:10px;display:flex;justify-content: space-around;
+}
+
+.delivery-input{
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+.delivery-input>input{
+    width:100%
+}
+.delivery-input>textarea{
+    width: 100%;
+}
+.button{
+    color: white;
+    background-color: pink;
+    border-radius: 5px;
+    padding:5px;
+    border: none;
+    outline: none;
+}
